--- a/faq-ui/src/app/footer/footer.component.html
+++ b/faq-ui/src/app/footer/footer.component.html
@@ -1,8 +1,6 @@
-<footer>
-	<div class="container">
-		<span class="text-xs-center">
+<footer class="bg-light">
+	<div class="container text-center small">
 			<a href="mailto=tiphaine.dalmas@gmail.com" class="text-dark">Tiphaine Dalmas</a> &copy;
 			{{today | date:'yyyy'}}
-		</span>
 	</div>
 </footer>
