Changed spinner toggle to from display to visibility

--- a/faq-ui/src/app/message/message.component.html
+++ b/faq-ui/src/app/message/message.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="hasText()" class="alert text-light my-2" [ngClass]="css()" role="alert">
+<div *ngIf="hasText()" class="alert text-light my-2" [ngClass]="textCss()" role="alert">
     <span [ngSwitch]="message.getTemplate()">
         <ng-container *ngSwitchCase="templateSelector.InvalidLogin" i18n="@@invalidLogin">Invalid username or password.</ng-container>
         <ng-container *ngSwitchCase="templateSelector.Created" i18n="@@created">Created.</ng-container>
@@ -7,4 +7,4 @@
         <ng-container *ngSwitchDefault>{{message.getText()}}</ng-container>
     </span>
 </div>
-<div *ngIf="isLoading()" class="spinner-grow spinner-grow-sm text-warning text-center my-2"></div>
+<div [ngClass]="spinnerCss()" class="spinner-grow spinner-grow-sm text-warning text-center my-2"></div>
