--- a/faq-ui/src/app/header/header.component.html
+++ b/faq-ui/src/app/header/header.component.html
@@ -27,10 +27,10 @@
                 </ul>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show" [hidden]="isCurrentLocale('en')">
-                <a href="/en/index.html" class="nav-link active">English</a>
+                <a href="{{getLocalizedUrl('en')}}" class="nav-link active">English</a>
             </li>
             <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show" [hidden]="isCurrentLocale('fr')">
-                <a href="/fr/index.html" class="nav-link active">Français</a>
+                <a href="{{getLocalizedUrl('fr')}}" class="nav-link active">Français</a>
             </li>
         </ul>
     </div>
